# c-compiler

./: .gitignore  Cargo.toml  Info_Report.md  README.md  complex_trial.c  coverage.sh  donut  donut.c  hello_world  hello_world.c  linux_release  memcpy_trial.c  signal_handle.c  signal_handler_trial.c  temp_global.c  test_add_simple_check  test_add_simple_gcc  test_char_array.c  test_for2.c  test_output.txt  test_simple_for.c  todo.md
benchmarks/: array_sum.c  bitwise.c  fib.c  fib_recursive.c  matmul.c  results.md  results_linux.md  run_benchmarks.ps1  run_benchmarks.sh  struct_bench.c  vectorize_stride2.c
codegen/: Cargo.toml  README.md
driver/: Cargo.toml  README.md
driver/src/: main.rs
driver/tests/: inprocess_tests.rs  integration_tests.rs  phase3.c  phase4.c
include/: stdio.h  stdlib.h
ir/: Cargo.toml  README.md
lexer/: Cargo.toml  README.md
model/: Cargo.toml  README.md
optimizer/: Cargo.toml  README.md
parser/: Cargo.toml  README.md
runtime/: README.md  malloc.c
semantic/: Cargo.toml  README.md
testing/: temp_test.c  test.c  test_1d_array.c  test_2d_array.c  test_add_once.c  test_add_simple.c  test_algebraic.c  test_aligned.c  test_all_opts.c  test_always_inline.c  test_array.c  test_array_index.c  test_array_printf.c  test_array_struct_init.c  test_arrow_operator.c  test_asm_real.c  test_attributes_comprehensive.c.skip  test_bitfield.c  test_bitwise.c  test_bool_alignof.c  test_break.c  test_bss_rodata.c  test_builtin_clz_runtime.c  test_builtin_expect.c  test_builtins_compat.c  test_builtins_numeric.c  test_char.c  test_char_array.c  (+150 more)
(+69 files in other folders)
