[package]
name = "driver"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
model = { path = "../model" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
ir = { path = "../ir" }
codegen = { path = "../codegen" }
semantic = { path = "../semantic" }
optimizer = { path = "../optimizer" }

[lints]
workspace = true
